Integrate openapi middleware to checking Jwt
