# api.yml
@@ -67,6 +67,8 @@ paths:
     get:
       operationId: profile
       description: Profile User base on user token
+      security:
+        - bearerAuth: [ ]
       responses:
         '200':
           description: Profile Detail
@@ -104,6 +106,11 @@ paths:
               schema:
                 $ref: "#/components/schemas/ErrorResponse"
 components:
+  securitySchemes:
+    bearerAuth:
+      type: http
+      scheme: bearer
+      bearerFormat: JWT
   schemas:
     RegisterReq:
       description: User register payload
